--- a/report.tex
+++ b/report.tex
@@ -13,15 +13,25 @@
   \newpage
   
   \section{Introduction}
-  
+    Notre but dans ce projet est de pouvoir concevoir un test facile d'usage permettant à une personne moyenne de tester la présence de la bactérie E. coli dans de l'eau.
+    
   \section{Contexte}
-  
+    Plus précisément, nous cherchons à trouver des épitopes sur la protéine \textbf{OmpF Porin} de la bactérie E. coli, qui seraient capables de détecter E. coli avec 100\% de taux de réussite quel que soit ses variations, mais sans détecter d'autres bactéries accidentellement. Ceci fait, notre épitope pourra être utilisé pour génerer un anticorps, qui sera ensuite utilisé dans le test ELISA.
+    
     \subsection{Escherichia coli}
-    
+      Escherichia coli, communément appelé E. coli, est une bactérie normalement trouvée dans le système digestif de divers animaux. Ceci en fait un indicateur potentiel pour tester des échantillons pour de la matière fécale. Donc si E. coli est présent dans de l'eau, c'est un avertissement comme quoi il ferait mieux de ne pas la consommer, sous risque d'intoxication alimentaire.
+      
+      Additionnellement, E. coli est une bactérie ayant été énormément utilisée en laboratoire, ce qui fait que plusieurs dizaines de séquences génomiques complètes sont disponible pour analyse.
+      
     \subsection{Epitopes et Anticorps}
-    
+      Un épitope, ou déterminant antigénique, est une partie d'un antigène, à laquelle un anticorps se lie. Cette liaison est le principe que nous allons utiliser pour faire fonctionner le test. Notre but est de trouver un épitope qui soit partagé par toutes les souches de E. coli sans être présent dans d'autres bactéries.
+      
+      Un antigène est une molécule capable de forcer le système immunitaire à produire des anticorps pour la contrer.
+      
+      Un anticorps est une protéine \#... à finir par Eléonore
+      
     \subsection{ELISA}
-    
+      \# à finir par Eléonore
   \section{Etat de l'art}
   
   \section{Réalisation}
