--- a/report.tex
+++ b/report.tex
@@ -33,7 +33,30 @@
     \subsection{ELISA}
       \# à finir par Eléonore
   \section{Etat de l'art}
+Avant de pouvoir trouver les épitopes communs de toutes les souches de E. coli, il va falloir faire un alignement de séquence avec toutes les souches afin de faire ressortir les régions de séquences similaires. \\
+
+Un alignement de séquence est une manière de représenter deux ou plusieurs séquences de macromolécules biologiques les unes sous les autres, de manière à en faire ressortir les régions homologues ou similaires. L'objectif d'un alignement de séquence est donc d'identifier les zones de concordance. \\
+
+ L'alignement devra être un alignement multiples car nous avons bien plus que deux souches à analyser. Il existe plusieurs algorithmes d'alignement de séquence, nous allons comparer les différents logiciels qui proposent un MSA(Multiple Sequence Alignements) ci-dessous.
+ 
+ 
+\begin{itemize}
+  \item ClustalW2 : Un des premiers logiciels de MSA datant de 1988. Les auteurs cite que le logiciel est clairement dépassé. Nous n'allons donc pas utilisé ce logiciel. 
+  \item MAFFT version 7 : possède un des algorithmes les plus rapides à ce jour et est donc l'un des plus utilisés. Les alignements généré par cet outil sont de bonne qualité mais possède certaines fois quelques petites erreurs.
   
+  \item Muscle: est un peu plus lent que MAFFT mais rien de très grave. Son alignement est un poile meilleur que celui de MAFFT. En plus de cela nous l'avons utilisé pendant notre laboratoire 2. Nous avons donc déjà l'habitude de ce logiciel. 
+
+	\item Clustal Omega: il utilise une méthode d'alignement progressive tandis que Muscle utilise une méthode d'alignement itérative. L'avantage de la méthode itérative est que l'on peut revenir au calcule précédent du meilleur alignement. Il y'a donc plus d'erreur possible avec une méthode d'alignement progressive que itérative.
+	
+\end{itemize}
+
+Nous allons donc nous orienter vers l'algorithme MUSCLE pour pouvoir aligner nos séquences de façon efficace.
+
+
+
+
+
+
   \section{Réalisation}
   
     \subsection{Analyse de OmpF porin}
