--- a/biblio.bib
+++ b/biblio.bib
@@ -22,3 +22,25 @@ year = "2012",
 howpublished = "\url{http://bioinfo-fr.net/alignements-multiples-quels-logiciels-choisir}"} 
 }
 
+@online{ec:genome,
+  author = "Oksana Lukjancenko, Trudy M. Wassenaar, and David W. Ussery",
+  title = "Comparison of 61 Sequenced Escherichia coli Genomes",
+  month = "juillet",
+  year = "2010",
+  howpublished="\url{https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2974192/}"
+}
+
+@online{elisa,
+  author = "Wikipedia",
+  title = "ELISA",
+  month = "decembre",
+  year = "2015",
+  howpublished="\url{https://en.wikipedia.org/wiki/ELISA#Sandwich_ELISA}"
+}
+
+@online{ompfp,
+  author = "Paul Champaloux",
+  title = "Function and Structure of OmpF Porin",
+  year = "2005",
+  howpublished = "\url{http://www.bio.davidson.edu/Courses/Molbio/MolStudents/spring2005/Champaloux/first.html}"
+}
