--- a/report.tex
+++ b/report.tex
@@ -47,7 +47,7 @@
   
 En premier lieu, nous allons d'abord nous intéresser à savoir si des tests existent déjà pour détecter la bactérie E. coli. Voici une méthode pour détecter la bactérie :\\
 Il existe un test avec une bande papier de ( 0.5 * 8 cm). Ce papier contient soit le 5-bromo-4-chloro-3-indolyl-B-D-glucuronide sel de sodium ( zone XG ci-dessous en image)et/ou le chlorophénol rouge B-galactopyranoside (zone CPRG ci-dessous en image). La bande de papier est ensuite mise dans l'eau avec la bactérie E. coli pendant 30 minutes. Si le papier change de couleur alors la bactérie E. coli est présente.\\\\
-  \includegraphics{img/ecoli.png}\\
+  \includegraphics{./img/ecoli.png}\\
 
 
 
