--- a/biblio.bib
+++ b/biblio.bib
@@ -3,7 +3,7 @@ author = "Springer Link",
 title = "Multiplexed paper test strip for quantitative bacterial detection",
 month = "juin",
 year = "2012",
-howpublished = "\url{http://link.springer.com/article/10.1007%2Fs00216-012-5975-x}"} 
+howpublished = "\url{http://link.springer.com/article/10.1007%2Fs00216-012-5975-x}"}
 }
 
 @ONLINE{wiki:Online,
@@ -11,7 +11,7 @@ author = "Wikipedia",
 title = "Multiple sequence alignment",
 month = "mai",
 year = "2016",
-howpublished = "\url{https://en.wikipedia.org/wiki/Multiple_sequence_alignment}"} 
+howpublished = "\url{https://en.wikipedia.org/wiki/Multiple_sequence_alignment}"}
 }
 
 @ONLINE{yoann:Online,
@@ -19,7 +19,7 @@ author = "Yoann M.",
 title = "Alignements multiples : quels logiciels choisir ?",
 month = "mai",
 year = "2012",
-howpublished = "\url{http://bioinfo-fr.net/alignements-multiples-quels-logiciels-choisir}"} 
+howpublished = "\url{http://bioinfo-fr.net/alignements-multiples-quels-logiciels-choisir}"}
 }
 
 @online{ec:genome,
@@ -43,4 +43,11 @@ howpublished = "\url{http://bioinfo-fr.net/alignements-multiples-quels-logiciels
   title = "Function and Structure of OmpF Porin",
   year = "2005",
   howpublished = "\url{http://www.bio.davidson.edu/Courses/Molbio/MolStudents/spring2005/Champaloux/first.html}"
+}
+
+@online{epitope_test,
+  author = "IEDB Solutions Center",
+  title = "Antibody Epitope Prediction",
+  year = "2005-2016",
+  howpublished = "\url{http://tools.immuneepitope.org/bcell/}"
 }
